# sea-level-monitoring

./: .gitignore  catppuccin_macchiato_dark.css  pyproject.toml  sea_level_01.5_check_geogrid.py  sea_level_01_extract.py  sea_level_02_transform_to_parquet.py  sea_level_03_explore.py  sea_level_04_load_into_DuckDB.py  sea_level_monitoring_uv.ipynb  sea_level_shared.py  sea_surface_temperature_01_extract.py  sea_surface_temperature_02_transform_to_parquet.py  sea_surface_temperature_03_explore.py
.virtual_documents/notebooks/: sea_level_monitoring_uv.ipynb
notebooks/: sea_level_monitoring_uv.ipynb
notebooks/.ipynb_checkpoints/: sea_level_monitoring_uv-checkpoint.ipynb
